force-app/main/default/objects/SVMXA360__CONF_ObjectMappingDetail__c/SVMXA360__CONF_ObjectMappingDetail__c.object-meta.xml
<CustomObject>
    <description>Stores the SPM Wizards information.</description>
    <label>Object Mapping Detail</label>
    <nameField>
        <displayFormat>OMD-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Object Mapping Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>