force-app/main/default/objects/SVMXA360__CONF_ObjectMappingDetail__c/fields/SVMXA360__ObjectMappingID__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ObjectMappingID__c</fullName>
    <description>The master object mapping ID for which the details are represented.</description>
    <label>Object Mapping</label>
    <referenceTo>SVMXA360__CONF_ObjectMapping__c</referenceTo>
    <relationshipLabel>Object Mapping Details</relationshipLabel>
    <relationshipName>Object_Mapping_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>