force-app/main/default/objects/SVMXA360__CONF_ObjectMappingDetail__c/fields/SVMXA360__ReferenceFieldLabel__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ReferenceFieldLabel__c</fullName>
    <description>Stores the multi-level reference field label of object mapping detail.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Stores the multi-level reference field label of object mapping detail.</inlineHelpText>
    <label>Reference Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>