force-app/main/default/objects/SVMXA360__CONF_ObjectMappingDetail__c/fields/SVMXA360__RelatedObjectDetails__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__RelatedObjectDetails__c</fullName>
    <description>Stores the object sequence of multi-level reference field of object mapping detail.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Stores the object sequence of multi-level reference field of object mapping detail.</inlineHelpText>
    <label>Related Object Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>