force-app/main/default/objects/SVMXA360__CONF_ObjectMappingDetail__c/fields/SVMXA360__SourceFieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SourceFieldAPIName__c</fullName>
    <description>The source field API name from which the value should be mapped.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Source Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>