force-app/main/default/objects/SVMXA360__CONF_ObjectMappingDetail__c/fields/SVMXA360__TargetFieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TargetFieldAPIName__c</fullName>
    <description>The target field API name to which the value should be mapped.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Target Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>