force-app/main/default/objects/SVMXA360__CONF_ObjectMappingDetail__c/fields/SVMXA360__Type__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Type__c</fullName>
    <description>Type of object mapping detail. For example, Value, Field, or Function.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field</fullName>
                <default>true</default>
                <label>Field</label>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
            <value>
                <fullName>Function</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>