force-app/main/default/objects/SVMXA360__CONF_ObjectMappingDetail__c/fields/SVMXA360__Value__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Value__c</fullName>
    <description>Mapped value to set in the target field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>